# Data-Log-System

./: README.md
22-23/IT/: .gitignore  package.json
22-23/IT/RegterschotDashboard/: .gitignore  README.md  karma.conf.js  tsconfig.app.json
22-23/IT/RegterschotDashboard/src/: index.html  proxy.conf.json
22-23/S1/: README.md
22-23/S1/mqtt-examples/build-simple_publisher-Desktop_Qt_5_15_0_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
22-23/S1/mqtt-examples/build-simple_subscriber-Desktop_Qt_5_15_0_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
22-23/S1/mqtt-examples/simple_publisher/: main.c  simple_publisher.pro
22-23/S1/mqtt-examples/simple_subscriber/: main.c  simple_subscriber.pro
22-23/S1/mqtt_pub/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  mqtt_pub  temp_sensor.cpp
22-23/S1/mqtt_pub/include/: definitions.h  (+1 more)
22-23/S1/mqtt_sub/: CMakeLists.txt  main.cpp
22-23/S1/mqtt_sub/MQTT-C-master/examples/templates/: posix_sockets.h
22-23/S1/mqtt_sub/include/: depend_win.h
22-23/S1/node-red/: flow_data_receiver.json  initial_flow.json  leon_ui.json
22-23/S1/rasp-pi-main-code/: CMakeLists.txt  main.cpp
22-23/S1/rasp-pi-main-code/include/: MCP3008.h  definitions.h  mqtt_publish.h  temp_sensor.h
22-23/S1/rasp-pi-main-code/src/: MCP3008.cpp  mqtt_publish.cpp  temp_sensor.cpp
22-23/S2/: README.md
22-23/S2/3-rpi-can-datalogger/: .gitignore  README.md
22-23/S2/docs/: REQUIREMENTS.md  TECHNICAL_DESIGN.md
docs/: REFLECTION.md  USE_CASES.md
docs/diagrams/: use_case_diagram.mmd
(+90 files in other folders)
